--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   "dependencies": {
     "@types/ws": "^6.0.3",
     "async": "^3.1.0",
+    "axios": "^0.19.0",
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "compression": "^1.7.4",
     "connect-mongo": "^3.0.0",
     "discord.js": "git://github.com/discordjs/discord.js.git#master",
