--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "dependencies": {
+    "@types/cheerio": "^0.22.13",
     "@types/ws": "^6.0.3",
     "async": "^3.1.0",
     "axios": "^0.19.0",
