--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@types/cheerio": "^0.22.13",
+    "@types/twitter": "^1.7.0",
     "@types/ws": "^6.0.3",
     "async": "^3.1.0",
     "axios": "^0.19.0",
@@ -53,6 +54,7 @@
     "pug": "^2.0.4",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "twitter": "^1.7.1",
     "winston": "^2.4.2"
   },
   "devDependencies": {
