--- a/package.json
+++ b/package.json
@@ -1,103 +1,44 @@
 {
-  "name": "express-typescript-starter",
+  "name": "pokemon-go-montreal-ts",
   "version": "0.1.0",
-  "description": "A starting point for Node.js express apps with TypeScript",
+  "description": "Pokemon GO Bots in TypeScript",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Microsoft/TypeScript-Node-Starter"
+    "url": "https://github.com/tatumalenko/ts-bots"
   },
-  "author": "Bowden Kelly",
+  "author": "Tatum Alenko",
   "license": "MIT",
   "scripts": {
-    "start": "npm run serve",
+    "start": "echo No start script",
     "build": "npm run build-ts && npm run lint && npm run copy-static-assets",
-    "serve": "node dist/server.js",
-    "watch-node": "nodemon dist/server.js",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\"",
-    "test": "jest --forceExit --coverage --verbose",
+    "test": "echo No test script",
     "watch-test": "npm run test -- --watchAll",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "copy-static-assets": "ts-node copyStaticAssets.ts",
-    "debug": "npm run build && npm run watch-debug",
-    "serve-debug": "nodemon --inspect dist/server.js",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
+    "debug": "npm run build && npm run watch-debug"
   },
   "dependencies": {
-    "@types/cheerio": "^0.22.13",
-    "@types/twitter": "^1.7.0",
-    "@types/ws": "^6.0.3",
-    "async": "^3.1.0",
+    "acorn": "^7.0.0",
     "axios": "^0.19.0",
-    "bcrypt-nodejs": "^0.0.3",
-    "bluebird": "^3.5.5",
-    "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
-    "compression": "^1.7.4",
-    "connect-mongo": "^3.0.0",
-    "discord.js": "git://github.com/discordjs/discord.js.git#master",
-    "dotenv": "^8.1.0",
-    "errorhandler": "^1.5.1",
-    "express": "^4.17.1",
-    "express-flash": "0.0.2",
-    "express-session": "^1.16.2",
-    "express-validator": "^6.1.1",
-    "fbgraph": "^1.4.4",
-    "lodash": "^4.17.15",
-    "lusca": "^1.6.1",
-    "mongoose": "^5.6.11",
-    "nodemailer": "^6.3.0",
-    "passport": "^0.4.0",
-    "passport-facebook": "^3.0.0",
-    "passport-local": "^1.0.0",
-    "pug": "^2.0.4",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "twitter": "^1.7.1",
-    "winston": "^2.4.2"
+    "discord.js": "git://github.com/discordjs/discord.js.git#4c088123026e520f46cb4ee21bb90140d2501215",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
-    "@types/async": "^3.0.1",
-    "@types/bcrypt-nodejs": "^0.0.30",
-    "@types/bluebird": "^3.5.27",
-    "@types/body-parser": "^1.17.1",
-    "@types/chai": "^4.2.0",
-    "@types/compression": "^0.0.36",
-    "@types/connect-mongo": "^0.0.42",
-    "@types/dotenv": "^6.1.1",
-    "@types/errorhandler": "^0.0.32",
-    "@types/express": "^4.17.1",
-    "@types/express-flash": "0.0.0",
-    "@types/express-session": "^1.15.14",
-    "@types/jest": "^24.0.18",
-    "@types/jquery": "^3.3.31",
-    "@types/lodash": "^4.14.138",
-    "@types/lusca": "^1.6.1",
-    "@types/mongodb": "^3.3.1",
-    "@types/mongoose": "^5.5.15",
-    "@types/morgan": "^1.7.37",
+    "@types/cheerio": "^0.22.13",
     "@types/node": "^12.7.2",
-    "@types/nodemailer": "^6.2.1",
-    "@types/passport": "^1.0.1",
-    "@types/passport-facebook": "^2.1.9",
-    "@types/passport-local": "^1.0.33",
-    "@types/request": "^2.48.2",
     "@types/shelljs": "^0.8.5",
-    "@types/supertest": "^2.0.8",
-    "@types/winston": "^2.3.9",
+    "@types/twitter": "^1.7.0",
+    "@types/ws": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
-    "chai": "^4.2.0",
     "concurrently": "^4.1.2",
     "eslint": "^5.0.0",
-    "eslint-plugin-import": "^2.18.2",
     "jest": "^24.9.0",
-    "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "shelljs": "^0.8.3",
-    "supertest": "^4.0.2",
-    "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   }
