--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
   ],
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
+    "source.fixAll.tslint": true,
     "source.organizeImports": true
   },
   "[javascript]": {
